# embedded_hello_compass

./: Cargo.toml  README.md  openocd.gdb
computer_viz/: Cargo.toml
computer_viz/src/: main.rs
src/: main.rs
