[package]
name = "micro_hello"
version = "0.1.0"
authors = ["joemclo8 <joemclo8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m = "0.1.1"
panic-halt = "0.2.0"
cortex-m = "0.5.6"
cortex-m-rt = "0.6.3"
numtoa = "0.2.3"

[dependencies.heapless]
default-features = false
version = "0.3.7"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"